# testing_ci

./: CMakeLists.txt
.github/workflows/: cmake-single-platform.yml
include/: solving_quadratic_equation.h
src/: CMakeLists.txt  solving_quadratic_equation.cpp
test/: CMakeLists.txt  test_solver_1.cpp  test_solver_2.cpp  test_solver_3.cpp  test_solver_4.cpp  test_solver_5.cpp  test_solver_6.cpp
